# Computer-Graphics

./: .gitignore  README.md
.cache/clangd/index/: box.cpp.B4576853003BF20C.idx  cone.cpp.D988FC2DDFC9D166.idx  generator.cpp.1A6F7D2514781D2D.idx  generator.h.A87B22791919A50D.idx  generic_functions.h.F7C18862A8329E1E.idx  global.h.2F86FCB0D88A5971.idx  plane.cpp.7F725D4E4ABFA677.idx  sphere.cpp.4CA51E2D27B08C31.idx
.github/workflows/: c-cpp.yml  ci.yml
Generator/: CMakeLists.txt  generator.cpp  generator.h
config/: global.hpp
engine/: CMakeLists.txt  engine  xml_teste.xml
engine/.cache/clangd/index/: camera.cpp.A6A4F85A2439906E.idx  camera.hpp.9F3600A85A0D00B5.idx  engine.cpp.BFF422B92549DB40.idx  includes.h.D087D7FB68C5F791.idx  model3d.cpp.B035F3609B197C6D.idx  tinyxml2.cpp.A4F05557086F09BB.idx  tinyxml2.h.F76AA94F5EDDC5A0.idx  world.cpp.6CF5B206326B66CC.idx
engine/demos/: box.xml  car.xml  cone.xml  earth.xml  heart.xml  mascote.xml  orange.xml  plane.xml  solarSystem.xml  solarSystem_animated.xml  sphere.xml  teapot.xml  test.xml  trump.xml
engine/demos/test_files/test_files_phase_1/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
engine/demos/test_files/test_files_phase_2/: test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
engine/demos/test_files/test_files_phase_3/: test_3_1.xml  test_3_2.xml
engine/demos/test_files/test_files_phase_4/: test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_5.xml  test_4_6.xml
engine/models/: bezier_10.3d  box.3d  box_2_3.3d  cone.3d  cone_1_2_4_3.3d  disc.3d  plane.3d  plane_2_3.3d  sphere.3d  sphere_1_10_10.3d  sphere_1_8_8.3d  teapot.3d
engine/scripts/: config.sh
engine/src/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  hum.txt  includes.h  model3d.cpp  parser.cpp  world.cpp  xml_teste.xml
engine/src/classes/camera/: camera.cpp  camera.hpp
engine/src/classes/face/: face.cpp  face.hpp
engine/src/classes/group/: group.cpp  group.hpp
engine/src/classes/light/: light.cpp  light.hpp
engine/src/classes/model3d/: model3d.cpp  model3d.hpp
engine/src/classes/modelConfig/: modelConfig.cpp  modelConfig.hpp
engine/src/classes/modelObj/: modelObj.cpp  modelObj.hpp
engine/src/classes/spline/: fds  spline.cpp  spline.hpp
engine/src/classes/transformation/: transformation.cpp  transformation.hpp
engine/src/classes/world/: world.cpp  world.hpp
engine/utils/colors_helpers/: colors_helpers.cpp  colors_helpers.hpp
engine/utils/direction_helpers/: direction_helpers.cpp  direction_helpers.hpp
engine/utils/file_helpers/: file_helpers.cpp  file_helpers.hpp
engine/utils/light_type_helpers/: light_type_helpers.cpp  light_type_helpers.hpp
engine/utils/obj_parser_helpers/: obj_parser_helpers.cpp  obj_parser_helpers.hpp
engine/utils/xml_parser_helpers/: xml_parser_helpers.cpp  xml_parser_helpers.hpp
generator/: CMakeLists.txt  README.md  fitcheiro
generator/src/: generator.cpp  generator.h  generator.hpp
generator/src/classes/model/: model.cpp  model.h  model.hpp
generator/src/classes/point/: point.cpp  point.hpp
generator/src/classes/triangle_index/: triangle_index.cpp  triangle_index.h  triangle_index.hpp
generator/src/config/: global.h
generator/src/models/box/: box.cpp  box.h  box.hpp
generator/src/models/cone/: cone.cpp  cone.h  cone.hpp
generator/src/models/patch/: patch.cpp  patch.hpp
generator/src/models/plane/: plane.cpp  plane.h  plane.hpp
generator/src/models/sphere/: sphere.cpp  sphere.h  sphere.hpp
generator/src/utils/model/: model.cpp  model.h
generator/src/utils/point/: point.h
utils/: generic_functions.hpp
utils/generic_functions/: generic_functions.h  generic_functions.hpp
utils/normal/: normal.cpp  normal.hpp
utils/point/: point.cpp
utils/point2d/: point2d.cpp  point2d.hpp
utils/string_helpers/: string_helpers.cpp  string_helpers.hpp
utils/vector/: vector.cpp  vector.hpp
